--- a/app/src/main/res/layout/activity_ready_transfer.xml
+++ b/app/src/main/res/layout/activity_ready_transfer.xml
@@ -42,20 +42,20 @@
         android:layout_margin="16dp"
         >
         <TextView
-            android:id="@+id/tv_reason_label"
+            android:id="@+id/tv_sender_address_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/reason_label"
+            android:text="@string/sender_address_label"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:layout_margin="16dp"
             />
 
         <TextView
-            android:id="@+id/tv_reason_value"
+            android:id="@+id/tv_sender_address_value"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/reason_value"
+            android:text="@string/sender_address_value"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:layout_margin="16dp"
