--- a/app/src/main/res/layout/activity_create_transfer.xml
+++ b/app/src/main/res/layout/activity_create_transfer.xml
@@ -24,6 +24,23 @@
         android:layout_margin="16dp"
         android:inputType="numberDecimal" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/transaction_gas_cost_label"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/transaction_gas_cost_value"
+            android:layout_weight="1"
+            android:id="@+id/tv_gas_cost_value"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/btn_ready_transfer"
         android:layout_width="wrap_content"
