--- a/app/src/main/res/layout/activity_add_eth.xml
+++ b/app/src/main/res/layout/activity_add_eth.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:orientation="vertical"
-    tools:context="com.example.graeme.beamitup.AddEthActivity">
+    tools:context="com.example.graeme.beamitup.eth.AddEthActivity">
 
     <EditText
         android:layout_width="match_parent"
