--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="8dp"
-    tools:context="com.example.graeme.beamitup.CreateAccountActivity">
+    tools:context="com.example.graeme.beamitup.account.CreateAccountActivity">
 
     <LinearLayout
         android:gravity="center_horizontal"
