--- a/app/src/main/res/layout/activity_ready_transfer.xml
+++ b/app/src/main/res/layout/activity_ready_transfer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.ReadyTransferActivity"
+    tools:context="com.example.graeme.beamitup.transfer.ReadyTransferActivity"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     >
