--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,18 +13,25 @@
         android:id="@+id/btn_transfer_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
         android:text="@string/btn_transfer_money"
         android:layout_margin="16dp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_alignParentTop="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_create_request"
+        android:id="@+id/btn_create_request"
+        android:layout_margin="16dp"
+        android:layout_below="@+id/btn_transfer_money"/>
 
     <Button
         android:id="@+id/btn_add_eth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
         android:text="@string/btn_add_eth"
         android:layout_margin="16dp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/btn_create_request"/>
 
-</LinearLayout>
+</RelativeLayout>
