Full flow working but need to fill in values on receive and send value in finish.

--- a/app/src/main/res/layout/activity_receive_request.xml
+++ b/app/src/main/res/layout/activity_receive_request.xml
@@ -3,10 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.request.ReadyRequestActivity"
-    android:layout_margin="16dp"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.graeme.beamitup.request.ReceiveRequestActivity">
+
+    <fragment
+        android:id="@+id/frag_eth_picker"
+        android:name="com.example.graeme.beamitup.eth.EthPickerFragment"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        tools:layout="@layout/list_item_eth" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,6 +50,26 @@
             android:id="@+id/tv_to_address_value"
             android:layout_weight="1"
             android:layout_margin="16dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2" >
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_decline_request"
+            android:text="@string/btn_decline_request"
+            android:layout_margin="16dp"
+            android:layout_weight="1"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_accept_request"
+            android:text="@string/btn_accept_request"
+            android:layout_margin="16dp"
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </LinearLayout>
