Splitting login into a fragment out of MainActivity. Want to make it display properly and then do request flow with it.

--- a/app/src/main/res/layout/activity_receive_request.xml
+++ b/app/src/main/res/layout/activity_receive_request.xml
@@ -11,7 +11,7 @@
         android:name="com.example.graeme.beamitup.eth.EthPickerFragment"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        tools:layout="@layout/list_item_eth" />
+        tools:layout="@layout/frag_list_item_eth" />
 
     <LinearLayout
         android:layout_width="match_parent"
