--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,35 +16,11 @@
         android:text="@string/btn_create_account"
         android:layout_gravity="right"/>
 
-    <LinearLayout
-        android:layout_gravity="center_horizontal"
+    <fragment
+        android:name="com.example.graeme.beamitup.account.LoginActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="16dp">
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/hint_email"
-            android:layout_margin="16dp"
-            android:inputType="textEmailAddress" />
-
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/hint_password"
-            android:layout_margin="16dp"
-            android:inputType="textPassword" />
-
-        <Button
-            android:id="@+id/btn_sign_in"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_sign_in"
-            android:layout_margin="16dp"
-            android:layout_gravity="center_horizontal"/>
-    </LinearLayout>
+        android:id="@+id/frag_login"
+        tools:layout="@layout/frag_login" />
 
 </LinearLayout>
