Split login/create account properly. Need to receive a request while not logged in and test.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="right"/>
 
     <fragment
-        android:name="com.example.graeme.beamitup.account.LoginActivity"
+        android:name="com.example.graeme.beamitup.account.LoginFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/frag_login"
