--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.graeme.beamitup.account.MainActivity"
+    tools:context="com.example.graeme.beamitup.account.LoginActivity"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:layout_margin="16dp"
