Initial progress. Displaying nickname and address in picker properly. Need to implement db/encryption correctly. Currently "password" is being used as private key when sending transaction. It should be used to unlock the private key from the wallet file.

--- a/app/src/main/res/layout/frag_list_item_eth.xml
+++ b/app/src/main/res/layout/frag_list_item_eth.xml
@@ -14,6 +14,14 @@
         />
 
     <TextView
+        android:id="@+id/tv_eth_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_eth_nickname"
+        android:layout_margin="16dp"
+        />
+
+    <TextView
         android:id="@+id/tv_eth_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
