--- a/app/src/main/res/layout/activity_receive_request.xml
+++ b/app/src/main/res/layout/activity_receive_request.xml
@@ -20,6 +20,26 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@string/tv_password"
+            android:layout_weight="1"
+            android:layout_margin="16dp"/>
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/et_password"
+            android:inputType="textPassword"
+            android:id="@+id/et_password"
+            android:layout_weight="1"
+            android:layout_margin="16dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@string/amount_label"
             android:layout_weight="1"
             android:layout_margin="16dp"/>
@@ -30,7 +50,6 @@
             android:id="@+id/tv_amount_value"
             android:layout_weight="1"
             android:layout_margin="16dp"/>
-
     </LinearLayout>
 
     <LinearLayout
