--- a/app/src/main/res/layout/activity_add_eth.xml
+++ b/app/src/main/res/layout/activity_add_eth.xml
@@ -3,9 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:gravity="center_horizontal"
+    android:layout_margin="16dp"
     android:orientation="vertical"
     tools:context="com.example.graeme.beamitup.eth.AddEthActivity">
+
+    <ProgressBar
+        android:id="@+id/pb_create_wallet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <EditText
         android:layout_width="match_parent"
