--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -18,10 +18,10 @@
         android:layout_alignParentTop="true"/>
 
     <Button
-        android:id="@+id/btn_add_eth"
+        android:id="@+id/btn_eth_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_add_eth"
+        android:text="@string/btn_eth_list"
         android:layout_margin="16dp"
         android:layout_gravity="center_horizontal"
         android:layout_below="@+id/btn_create_request"/>
