--- a/app/src/main/res/layout/activity_eth_list.xml
+++ b/app/src/main/res/layout/activity_eth_list.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical"
     tools:context=".eth.EthListActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_add_eth"
+        android:id="@+id/btn_add_eth"/>
+
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
