--- a/app/src/main/res/layout/fragment_eth_detail.xml
+++ b/app/src/main/res/layout/fragment_eth_detail.xml
@@ -42,14 +42,13 @@
             android:layout_margin="16dp"
             android:layout_weight="1"/>
 
-        <EditText
+        <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="text"
             android:layout_margin="16dp"
             android:text="@string/et_eth_address"
-            android:id="@+id/et_eth_address"/>
+            android:id="@+id/tv_eth_address"/>
 
     </LinearLayout>
 
@@ -75,5 +74,10 @@
 
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_save_eth"
+        android:id="@+id/btn_save_eth"/>
 
 </LinearLayout>
