--- a/app/src/main/res/layout/activity_create_request.xml
+++ b/app/src/main/res/layout/activity_create_request.xml
@@ -46,12 +46,14 @@
             android:text="@string/tv_gas_cost_label"
             android:layout_weight="1"/>
 
-        <TextView
-            android:layout_width="0dp"
+        <fragment
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_gas_cost_value"
+            android:name="com.example.graeme.beamitup.eth_tasks.GasPriceFragment"
+            android:id="@+id/frag_get_gas_cost"
+            tools:layout="@layout/frag_gas_cost"
             android:layout_weight="1"
-            android:id="@+id/tv_gas_cost_value"/>
+            />
     </LinearLayout>
 
     <Button
