Added QR code - need to make into separate fragment

--- a/app/src/main/res/layout/activity_eth_detail.xml
+++ b/app/src/main/res/layout/activity_eth_detail.xml
@@ -77,6 +77,12 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:contentDescription="@string/desc_address_qr_code"
+        android:id="@+id/qr_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
