--- a/app/src/main/res/layout/activity_eth_detail.xml
+++ b/app/src/main/res/layout/activity_eth_detail.xml
@@ -1,51 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="16dp"
-    android:orientation="vertical"
     tools:context=".eth.EthDetailActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/et_eth_nickname"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/et_eth_nickname"
+        android:layout_margin="8dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:weightSum="2">
+        android:id="@+id/tv_eth_nickname"
+        android:text="@string/tv_eth_nickname" >
+    </TextView>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/tv_eth_nickname"
-            android:layout_margin="16dp"/>
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="text"
-            android:layout_margin="16dp"
-            android:text="@string/et_eth_nickname"
-            android:id="@+id/et_eth_nickname"/>
-
-    </LinearLayout>
+    <EditText
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_eth_nickname"
+        app:layout_constraintLeft_toRightOf="@+id/tv_eth_nickname"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:layout_margin="8dp"
+        android:text="@string/et_eth_nickname"
+        android:id="@+id/et_eth_nickname"/>
 
     <fragment
-        android:layout_gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/tv_eth_nickname"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="8dp"
         android:name="com.example.graeme.beamitup.QRCodeDisplayFragment"
         android:id="@+id/frag_qrcode_display"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_qrcode_display"
+        tools:layout="@layout/frag_qrcode_display"
         />
 
     <Button
+        app:layout_constraintTop_toBottomOf="@+id/frag_qrcode_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:text="@string/btn_save_eth"
-        android:layout_margin="16dp"
+        android:layout_margin="8dp"
         android:layout_gravity="center"
         android:id="@+id/btn_save_eth"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
