Separated address text display into its own fragment

--- a/app/src/main/res/layout/frag_qrcode_display.xml
+++ b/app/src/main/res/layout/frag_qrcode_display.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".QRCodeDisplayFragment">
+    tools:context=".AddressQRCodeDisplayFragment">
 
     <ImageView
         android:id="@+id/iv_qr_code"
@@ -18,16 +18,5 @@
         app:layout_constraintRight_toRightOf="parent"
         >
     </ImageView>
-
-    <TextView
-        android:id="@+id/tv_eth_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/tv_eth_address_default"
-        app:layout_constraintTop_toBottomOf="@+id/iv_qr_code"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
 
 </android.support.constraint.ConstraintLayout>
