--- a/app/src/main/res/layout/activity_eth_detail.xml
+++ b/app/src/main/res/layout/activity_eth_detail.xml
@@ -36,15 +36,27 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="8dp"
-        android:name="com.example.graeme.beamitup.QRCodeDisplayFragment"
+        android:name="com.example.graeme.beamitup.AddressQRCodeDisplayFragment"
         android:id="@+id/frag_qr_code_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout="@layout/frag_qrcode_display"
         />
 
-    <Button
+    <fragment
         app:layout_constraintTop_toBottomOf="@+id/frag_qr_code_display"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="8dp"
+        android:name="com.example.graeme.beamitup.AddressCopyableTextDisplayFragment"
+        android:id="@+id/frag_copyable_text_display"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/frag_address_copyable_text_display"
+        />
+
+    <Button
+        app:layout_constraintTop_toBottomOf="@+id/frag_copyable_text_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
