--- a/app/src/main/res/layout/activity_receive_request.xml
+++ b/app/src/main/res/layout/activity_receive_request.xml
@@ -8,12 +8,12 @@
     tools:context="com.example.graeme.beamitup.request.ReceiveRequestActivity">
 
     <fragment
-        android:id="@+id/frag_eth_picker"
-        android:name="com.example.graeme.beamitup.eth.EthPickerFragment"
+        android:id="@+id/frag_wallet_picker"
+        android:name="com.example.graeme.beamitup.wallet.WalletPickerFragment"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="16dp"
-        tools:layout="@layout/frag_list_item_eth" />
+        tools:layout="@layout/frag_list_item_wallet" />
 
     <LinearLayout
         android:layout_width="match_parent"
