--- a/app/src/main/res/layout/frag_address_copyable_text_display.xml
+++ b/app/src/main/res/layout/frag_address_copyable_text_display.xml
@@ -7,11 +7,11 @@
     tools:context=".AddressCopyableTextDisplayFragment">
 
     <TextView
-        android:id="@+id/tv_eth_address"
+        android:id="@+id/tv_wallet_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="@string/tv_eth_address_default"
+        android:text="@string/tv_wallet_address_default"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
