--- a/app/src/main/res/layout/frag_copyable_qrcode.xml
+++ b/app/src/main/res/layout/frag_copyable_qrcode.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AddressQRCodeDisplayFragment">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_qr_code"
